--- a/package.json
+++ b/package.json
@@ -4,13 +4,11 @@
   "description": "== README",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },"engines": {
-  "node": "4.1.1",
-  "npm": "2.1.x"
+    "postinstall": "./node_modules/.bin/webpack"
   },
-  "scripts": {
-  "postinstall": "./node_modules/.bin/webpack"
+  "engines": {
+    "node": "4.1.1",
+    "npm": "2.1.x"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +20,7 @@
     "babel-preset-react": "^6.16.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-modal": "^1.5.2",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
