--- a/package.json
+++ b/package.json
@@ -16,14 +16,28 @@
   "dependencies": {
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.7",
+    "babel-plugin-transform-async-to-generator": "^6.16.0",
+    "babel-plugin-transform-regenerator": "^6.16.1",
+    "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "co": "^4.6.0",
+    "co-sleep": "0.0.1",
+    "imagesloaded": "^4.1.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-masonry-component": "^4.3.1",
     "react-modal": "^1.5.2",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
     "webpack": "^1.13.3"
+  },
+  "devDependencies": {
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.7",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-0": "^6.16.0"
   }
 }
