--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "== README",
   "main": "index.js",
-
   "engines": {
     "node": "4.1.1",
     "npm": "2.1.x"
@@ -25,6 +24,7 @@
     "co": "^4.6.0",
     "co-sleep": "0.0.1",
     "imagesloaded": "^4.1.1",
+    "nuka-carousel": "^2.0.3",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-masonry-component": "^4.3.1",
