--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "co": "^4.6.0",
     "co-sleep": "0.0.1",
     "imagesloaded": "^4.1.1",
+    "nuka-carousel": "^2.0.4",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-masonry-component": "^4.3.1",
