--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "3.9.3"
   },
   "scripts": {
-    "postinstall": "./node_modules/.bin/webpack && npm install"
+    "postinstall": "./node_modules/.bin/webpack"
   },
   "keywords": [],
   "author": "",
@@ -16,18 +16,17 @@
   "dependencies": {
     "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-es2015-modules-amd": "^6.24.1",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-runtime": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
     "babel-plugin-transform-async-to-generator": "^6.16.0",
+    "babel-plugin-transform-es2015-modules-amd": "^6.24.1",
     "babel-plugin-transform-regenerator": "^6.16.1",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-runtime": "^6.26.0",
     "co": "^4.6.0",
     "co-sleep": "0.0.1",
     "imagesloaded": "^4.1.1",
@@ -39,12 +38,11 @@
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
-    "webpack": "^1.13.3"
+    "webpack": "^1.15.0"
   },
   "devDependencies": {
     "babel-plugin-react-html-attrs": "^2.0.0",
     "babel-plugin-transform-react-jsx-source": "^6.22.0",
-    "babel-polyfill": "^6.26.0",
     "babel-preset-stage-0": "^6.16.0"
   }
 }
